# SecretCrushBrowser

./: .gitignore  CMakeLists.txt  LICENSE  README.md
.github/workflows/: build.yml
resources/: dark-style.css  installer.nsi  resources.qrc
resources/images/: icon.icns
src/: favwindow.cpp  favwindow.h  favwindow.ui  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  performancedialog.cpp  performancedialog.h  performancedialog.ui  treeitem.cpp  treeitem.h  treemodel.cpp  treemodel.h
